[FEAT] input 닉네임 2자리씩 끊어서 Map에 담는 기능 추가